Fix card-link line-height/letter-spacing styles

--- a/src/components/card-link/card-link.scss
+++ b/src/components/card-link/card-link.scss
@@ -1,5 +1,6 @@
 card-link {
   display: block;
+  line-height: normal;
 
   a {
     display: block;
@@ -58,6 +59,7 @@ card-link {
     display: block;
     font-size: 20px;
     font-weight: 600;
+    letter-spacing: normal;
     margin-bottom: 16px;
   }
 
